--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,20 +1,19 @@
 ---
 // Henter parametrene fra Astro.props
-const { htmlheading="h2", size="medium", font="sans", stylingclasses=""} = Astro.props; 
+const { htmlheading="h1", size="h1", font="", stylingclasses=""} = Astro.props; 
 const Htmlheading = htmlheading;
  
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"large": "text-3xl lg:text-6xl",
-"medium": "text-2xl lg:text-3xl",
-"small": "text-xl",
+"h1": "text-[30px] lg:text-[50px] font-semibold",
+"h2": "text-[25px] lg:text-[38px] font-medium",
+"h3": "text-[17px] lg:text-[25px] font-medium",
+"h4": "text-[15px] lg:text-[20px] font-semibold",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
 const fontClasses = {
-"display": "font-display",
-"sans": "font-sans",
-"serif": "font-serif",
+
 };
 ---
 <Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}><slot /></Htmlheading>
