--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ import Button from "../components/Button.astro";
 <MainLayout title="Titel">
 	<main class="container mx-auto p-4">
 		<Heading htmlheading="h1">Lav noget flot!</Heading>
-        <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
-		<Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
+        <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
+		<Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
+		<Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
 	</main>
 </MainLayout>
