--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -66,7 +66,8 @@
 
 @layer base {
   body {
-    @apply bg-[color:var(--color-white)] text-[color:var(--color-black)];
+    color: var(--color-black);
+    background-color: var(--color-white);
   }
 }
 
