--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,21 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 ---
+
 <MainLayout title="Titel">
-	<main class="container mx-auto p-4">
-		<Heading htmlheading="h1">Lav noget flot!</Heading>
-        <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
-		<Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
-		<Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
-	</main>
+  <main class="container mx-auto p-4">
+    <section id="hero"></section>
+    <section id="four_reasons"></section>
+    <section id="intro"></section>
+    <section id="popular"></section>
+    <section id="reviews"></section>
+    <section id="sustainability"></section>
+    <section id="info_meeting"></section>
+    <section id="blog_posts"></section>
+    <Heading htmlheading="h1">Lav noget flot!</Heading>
+
+    <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
+    <Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
+    <Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
+  </main>
 </MainLayout>
