--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,19 +1,25 @@
 ---
 // Henter parametrene fra Astro.props
-const { htmlheading="h1", size="h1", font="", stylingclasses=""} = Astro.props; 
+const {
+  htmlheading = "h1",
+  size = "h1",
+  font = "",
+  stylingclasses = "",
+} = Astro.props;
 const Htmlheading = htmlheading;
- 
+
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"h1": "text-[30px] lg:text-[50px] font-semibold",
-"h2": "text-[25px] lg:text-[38px] font-medium",
-"h3": "text-[17px] lg:text-[25px] font-medium",
-"h4": "text-[15px] lg:text-[20px] font-semibold",
+  h1: "text-[35px] lg:text-[50px] font-semibold",
+  h2: "text-[30px] lg:text-[38px] font-medium",
+  h3: "text-[17px] lg:text-[25px] font-medium",
+  h4: "text-[15.5px] lg:text-[20px] font-semibold",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
-const fontClasses = {
-
-};
+const fontClasses = {};
 ---
-<Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}><slot /></Htmlheading>
+
+<Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}
+  ><slot /></Htmlheading
+>
