add and style intro

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -10,8 +10,8 @@ const Htmlheading = htmlheading;
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-  h1: "text-[35px] lg:text-[50px] font-semibold",
-  h2: "text-[30px] lg:text-[38px] font-medium",
+  h1: "text-[35px] lg:text-[50px] font-semibold leading-[56px]",
+  h2: "text-[30px] leading-[42px] lg:text-[38px] font-medium lg:leading-[45px]",
   h3: "text-[17px] lg:text-[25px] font-medium",
   h4: "text-[15.5px] lg:text-[20px] font-semibold",
 };
