working on sustainability

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,13 +166,104 @@ import ReviewCard from "../components/ReviewCard.astro";
         >Rated 4.6 out of 5 based on 140 reviews</Text
       >
     </section>
-    <section id="sustainability"></section>
-    <section id="info_meeting"></section>
-    <section id="blog_posts"></section>
-    <Heading htmlheading="h1">Lav noget flot!</Heading>
+    <section id="sustainability" class="px-4 py-20">
+      <div class="lg:grid lg:grid-cols-12 lg:gap-4">
+        <Heading
+          size="h2"
+          htmlheading="h2"
+          stylingclasses="pb-2 lg:col-start-1 lg:col-end-6"
+          >Hos HÖJSKOLENDK rejser du med omtanke</Heading
+        >
+        <Heading
+          size="h3"
+          htmlheading="h3"
+          stylingclasses="pb-15 lg:col-start-7 lg:col-end-13"
+          >Eventyr og ansvar går hånd i hånd hos HÖJSKOLENDK. Vi tager aktivt
+          stilling til vores aftryk på verden og arbejder for at skabe
+          bæredygtige rejseoplevelser med respekt for naturen, kulturer,
+          mennesker og dyr. Sammen planter vi træer, støtter lokale projekter og
+          rejser med grøn samvittighed – så du kan opleve verden med hjertet på
+          det rette sted.</Heading
+        >
+        <div
+          class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden"
+        >
+          <div class="flex flex-row gap-6 py-5 w-max lg:px-0">
+            <article class="border-l-1 border-black w-[230px]">
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+                >Vi rejser grønnere</Heading
+              >
+              <Text
+                teksttype="p_regular"
+                stylingclasses="px-4 pb-20 text-dark-grey"
+                >Sammen med Trees for the Future planter vi 50 træer for hver
+                elev, der rejser med os. Det gavner klimaet og hjælper lokale
+                landmænd med at skabe bæredygtige leveveje.</Text
+              >
+              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+            </article>
+            <article class="border-l-1 border-black w-[230px]">
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+                >Vi rejser grønnere</Heading
+              >
+              <Text
+                teksttype="p_regular"
+                stylingclasses="px-4 pb-20 text-dark-grey"
+                >Sammen med Trees for the Future planter vi 50 træer for hver
+                elev, der rejser med os. Det gavner klimaet og hjælper lokale
+                landmænd med at skabe bæredygtige leveveje.</Text
+              >
+              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+            </article>
+            <article class="border-l-1 border-black w-[230px]">
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+                >Vi rejser grønnere</Heading
+              >
+              <Text
+                teksttype="p_regular"
+                stylingclasses="px-4 pb-20 text-dark-grey"
+                >Sammen med Trees for the Future planter vi 50 træer for hver
+                elev, der rejser med os. Det gavner klimaet og hjælper lokale
+                landmænd med at skabe bæredygtige leveveje.</Text
+              >
+              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+            </article>
+            <article class="border-l-1 border-black w-[230px]">
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+                >Vi rejser grønnere</Heading
+              >
+              <Text
+                teksttype="p_regular"
+                stylingclasses="px-4 pb-20 text-dark-grey"
+                >Sammen med Trees for the Future planter vi 50 træer for hver
+                elev, der rejser med os. Det gavner klimaet og hjælper lokale
+                landmænd med at skabe bæredygtige leveveje.</Text
+              >
+              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+            </article>
+            <article class="border-l-1 border-black w-[230px]">
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+                >Vi rejser grønnere</Heading
+              >
+              <Text
+                teksttype="p_regular"
+                stylingclasses="px-4 pb-20 text-dark-grey"
+                >Sammen med Trees for the Future planter vi 50 træer for hver
+                elev, der rejser med os. Det gavner klimaet og hjælper lokale
+                landmænd med at skabe bæredygtige leveveje.</Text
+              >
+              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+            </article>
+          </div>
+        </div>
+      </div>
+      <section id="info_meeting"></section>
+      <section id="blog_posts"></section>
+      <Heading htmlheading="h1">Lav noget flot!</Heading>
 
-    <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
-    <Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
-    <Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
+      <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
+      <Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
+      <Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
+    </section>
   </main>
 </MainLayout>
