--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,7 +166,7 @@ import ReviewCard from "../components/ReviewCard.astro";
         >Rated 4.6 out of 5 based on 140 reviews</Text
       >
     </section>
-    <section id="sustainability" class="px-4 py-20">
+    <section id="sustainability" class="px-4 py-20 lg:pb-20">
       <div class="lg:grid lg:grid-cols-12 lg:gap-4">
         <Heading
           size="h2"
@@ -177,7 +177,7 @@ import ReviewCard from "../components/ReviewCard.astro";
         <Heading
           size="h3"
           htmlheading="h3"
-          stylingclasses="pb-15 lg:col-start-7 lg:col-end-13"
+          stylingclasses="pb-15 lg:col-start-7 lg:col-end-13 lg:pb-20"
           >Eventyr og ansvar går hånd i hånd hos HÖJSKOLENDK. Vi tager aktivt
           stilling til vores aftryk på verden og arbejder for at skabe
           bæredygtige rejseoplevelser med respekt for naturen, kulturer,
@@ -186,7 +186,7 @@ import ReviewCard from "../components/ReviewCard.astro";
           det rette sted.</Heading
         >
         <div
-          class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden"
+          class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden lg:overflow-visible lg:justify-self-end lg:col-start-1 lg:col-end-13"
         >
           <div class="flex flex-row gap-6 py-5 w-max lg:px-0">
             <article class="border-l-1 border-black w-[230px]">
@@ -257,13 +257,8 @@ import ReviewCard from "../components/ReviewCard.astro";
           </div>
         </div>
       </div>
-      <section id="info_meeting"></section>
-      <section id="blog_posts"></section>
-      <Heading htmlheading="h1">Lav noget flot!</Heading>
-
-      <Text teksttype="p_regular">Så bliver Anders glad:-)</Text>
-      <Text teksttype="p_medium">Så bliver Anders glad:-)</Text>
-      <Text teksttype="p_smaller">Så bliver Anders glad:-)</Text>
     </section>
+    <section id="info_meeting"></section>
+    <section id="blog_posts"></section>
   </main>
 </MainLayout>
