--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,7 +258,57 @@ import ReviewCard from "../components/ReviewCard.astro";
         </div>
       </div>
     </section>
-    <section id="info_meeting"></section>
-    <section id="blog_posts"></section>
+    <section
+      id="info_meeting"
+      class="bg-off-white px-4 py-20 lg:grid lg:grid-cols-12 lg:gap-4 lg:py-25"
+    >
+      <div class="lg:flex lg:flex-col lg:col-start-1 lg:col-end-4">
+        <Heading size="h1" htmlheading="h1" stylingclasses="pb-5"
+          >Kommende infomøder</Heading
+        >
+        <Text teksttype="p_regular" stylingclasses="pb-8"
+          >Kig forbi et af vores hyggelige infomøder i København, Aarhus eller
+          online – vi glæder os til at møde dig!</Text
+        >
+      </div>
+      <div
+        class="grid grid-cols-2 gap-4 place-items-center lg:flex lg:flex-row lg:col-start-5 lg:col-end-13"
+      >
+        <article>
+          <img src="/svg/aarhus.svg" alt="Danmarkskort med Aarhus markeret" />
+          <Text teksttype="p_regular" stylingclasses="text-dark-grey py-1.5"
+            >6. November 2025 kl. 17-19</Text
+          >
+          <Heading size="h3" htmlheading="h3" stylingclasses="">Århus</Heading>
+        </article>
+        <article>
+          <img src="/svg/online.svg" alt="Verdenskort med online-ikon over" />
+          <Text teksttype="p_regular" stylingclasses="text-dark-grey py-1.5"
+            >12. November 2025 kl. 17-19</Text
+          >
+          <Heading size="h3" htmlheading="h3" stylingclasses="">Online</Heading>
+        </article>
+        <article>
+          <img
+            src="/svg/kobenhavn.svg"
+            alt="Danmarkskort med København markeret"
+          />
+          <Text teksttype="p_regular" stylingclasses="text-dark-grey py-1.5"
+            >18. November 2025 kl. 17-19</Text
+          >
+          <Heading size="h3" htmlheading="h3" stylingclasses=""
+            >København</Heading
+          >
+        </article>
+        <article>
+          <img src="/svg/online.svg" alt="Verdenskort med online-ikon over" />
+          <Text teksttype="p_regular" stylingclasses="text-dark-grey py-1.5"
+            >10. December 2025 kl. 17-19</Text
+          >
+          <Heading size="h3" htmlheading="h3" stylingclasses="">Online</Heading>
+        </article>
+      </div>
+      <section id="blog_posts"></section>
+    </section>
   </main>
 </MainLayout>
