--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,70 +189,70 @@ import ReviewCard from "../components/ReviewCard.astro";
           class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden lg:overflow-visible lg:justify-self-end lg:col-start-1 lg:col-end-13"
         >
           <div class="flex flex-row gap-6 py-5 w-max lg:px-0">
-            <article class="border-l-1 border-black w-[230px]">
-              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
+            <article
+              class="border-l-1 border-black w-[230px] flex flex-col justify-between h-[534px]"
+            >
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4"
                 >Vi rejser grønnere</Heading
               >
-              <Text
-                teksttype="p_regular"
-                stylingclasses="px-4 pb-20 text-dark-grey"
+              <Text teksttype="p_regular" stylingclasses="px-4 text-dark-grey"
                 >Sammen med Trees for the Future planter vi 50 træer for hver
                 elev, der rejser med os. Det gavner klimaet og hjælper lokale
                 landmænd med at skabe bæredygtige leveveje.</Text
               >
               <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
             </article>
-            <article class="border-l-1 border-black w-[230px]">
-              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
-                >Vi rejser grønnere</Heading
+            <article
+              class="border-l-1 border-black w-[230px] flex flex-col justify-between h-[534px]"
+            >
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4"
+                >Vi støtter Verdens Skove</Heading
               >
-              <Text
-                teksttype="p_regular"
-                stylingclasses="px-4 pb-20 text-dark-grey"
-                >Sammen med Trees for the Future planter vi 50 træer for hver
-                elev, der rejser med os. Det gavner klimaet og hjælper lokale
-                landmænd med at skabe bæredygtige leveveje.</Text
+              <Text teksttype="p_regular" stylingclasses="px-4 text-dark-grey"
+                >Vi har allerede været med til at frede over 100.000 m² regnskov
+                i Nicaragua gennem Verdens Skove. Hver t-shirt, vores elever
+                køber, bidrager direkte til bevarelse af natur og dyreliv.</Text
               >
-              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+              <img src="img/skov.webp" alt="Skov" />
             </article>
-            <article class="border-l-1 border-black w-[230px]">
-              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
-                >Vi rejser grønnere</Heading
+            <article
+              class="border-l-1 border-black w-[230px] flex flex-col justify-between h-[534px]"
+            >
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4"
+                >Vi siger nej til dyr i fangeskab</Heading
               >
-              <Text
-                teksttype="p_regular"
-                stylingclasses="px-4 pb-20 text-dark-grey"
-                >Sammen med Trees for the Future planter vi 50 træer for hver
-                elev, der rejser med os. Det gavner klimaet og hjælper lokale
-                landmænd med at skabe bæredygtige leveveje.</Text
+              <Text teksttype="p_regular" stylingclasses="px-4 text-dark-grey"
+                >Vi samarbejder med World Animal Protection og afviser alle
+                aktiviteter med dyr i fangenskab. I stedet oplever vi dyrelivet
+                frit og respektfuldt i naturen.</Text
               >
-              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+              <img src="img/bur.webp" alt="Abe i bur" />
             </article>
-            <article class="border-l-1 border-black w-[230px]">
-              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
-                >Vi rejser grønnere</Heading
+            <article
+              class="border-l-1 border-black w-[230px] flex flex-col justify-between h-[534px]"
+            >
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4"
+                >Vi vælger ansvarlige samarbejdspartnere
+              </Heading>
+              <Text teksttype="p_regular" stylingclasses="px-4 text-dark-grey"
+                >Vi arbejder kun med partnere, der deler vores værdier om etik,
+                miljø og ordentlige lokale forhold – så rejsen gør godt, både
+                for mennesker og planet.</Text
               >
-              <Text
-                teksttype="p_regular"
-                stylingclasses="px-4 pb-20 text-dark-grey"
-                >Sammen med Trees for the Future planter vi 50 træer for hver
-                elev, der rejser med os. Det gavner klimaet og hjælper lokale
-                landmænd med at skabe bæredygtige leveveje.</Text
-              >
-              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+              <img src="img/partner.webp" alt="To personer ved computeren" />
             </article>
-            <article class="border-l-1 border-black w-[230px]">
-              <Heading size="h4" htmlheading="h4" stylingclasses="px-4 pb-20"
-                >Vi rejser grønnere</Heading
+            <article
+              class="border-l-1 border-black w-[230px] flex flex-col justify-between h-[534px]"
+            >
+              <Heading size="h4" htmlheading="h4" stylingclasses="px-4"
+                >Vi støtter kriseramte områder</Heading
               >
-              <Text
-                teksttype="p_regular"
-                stylingclasses="px-4 pb-20 text-dark-grey"
-                >Sammen med Trees for the Future planter vi 50 træer for hver
-                elev, der rejser med os. Det gavner klimaet og hjælper lokale
-                landmænd med at skabe bæredygtige leveveje.</Text
+              <Text teksttype="p_regular" stylingclasses="px-4 text-dark-grey"
+                >Når naturkatastrofer rammer de lande, vi rejser i, donerer vi
+                til lokale genopbygningsprojekter. Sammen gør vi en forskel dér,
+                hvor der er mest brug for det.</Text
               >
-              <img src="img/flyvemaskine.webp" alt="Flyvemaskine" />
+              <img src="img/krise.webp" alt="Kriseramt område" />
             </article>
           </div>
         </div>
