--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -186,7 +186,7 @@ import ReviewCard from "../components/ReviewCard.astro";
           det rette sted.</Heading
         >
         <div
-          class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden lg:overflow-visible lg:justify-self-end lg:col-start-1 lg:col-end-13"
+          class="overflow-x-auto [-ms-overflow-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden xl:overflow-visible xl:justify-self-end lg:col-start-1 lg:col-end-13"
         >
           <div class="flex flex-row gap-6 py-5 w-max lg:px-0">
             <article
@@ -256,6 +256,9 @@ import ReviewCard from "../components/ReviewCard.astro";
             </article>
           </div>
         </div>
+      </div>
+      <div class="flex justify-end pr-2 xl:hidden">
+        <img src="svg/arrows.svg" alt="Pile ikoner" class="w-20" />
       </div>
     </section>
     <section
