--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -11,6 +11,9 @@ import ReviewCard from "../components/ReviewCard.astro";
 
 <MainLayout title="Titel">
   <main>
-    <section></section>
+    <section>
+      <Button variant="primary">Primary Button</Button>
+      <Button variant="secondary">Secondary Button</Button>
+    </section>
   </main>
 </MainLayout>
