--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,70 @@
 ---
+import Heading from "../components/Heading.astro";
+import Text from "../components/Text.astro";
 ---
-<footer class="bg-primary-500 text-white">
-    <div class="container mx-auto p-4">
-        <p>&copy; 2025</p>
+
+<footer class="bg-[var(--color-orange)] text-[var(--color-white)]">
+  <div class="grid grid-cols-12 gap-y-8 px-4 py-10">
+    <!-- Om os -->
+    <div class="col-span-12">
+      <Text teksttype="p_regular"> Om os </Text>
+      <Heading htmlheading="h4" size="h4" stylingclasses="mb-2"
+        >HÖJSKOLENDK er en dansk højskole, der tager dig med ud i verden. Vi
+        skaber højskoleophold i udlandet for unge, der drømmer om fællesskab,
+        eventyr og meningsfulde oplevelser. Hos os handler højskolelivet ikke om
+        klasselokaler – men om kulturmøder, natur, personlig udvikling og
+        uforglemmelige rejser med andre danske unge. Uanset om du drømmer om at
+        surfe på Balis bølger, opleve Japans kultur, vandre i Costa Ricas
+        regnskov eller mærke friheden i Australien, kan du glæde dig til trygge
+        rammer, dygtige undervisere og en rejse, der rykker dig – både som
+        menneske og som rejsende. Tag på højskole i udlandet, fyld rygsækken med
+        oplevelser for livet, og kom hjem med nye perspektiver, selvtillid og
+        venner for evigt.</Heading
+      >
     </div>
+
+    <!-- Kontakt info, to kolonner-->
+    <div class="col-span-6">
+      <Text teksttype="p_smaller" stylingclasses="opacity-90">Telefon</Text>
+      <Heading htmlheading="span" size="h4">70 27 90 07</Heading>
+    </div>
+
+    <div class="col-span-6">
+      <Text teksttype="p_smaller" stylingclasses="opacity-90">Mail</Text>
+      <Heading htmlheading="span" size="h4">info@hojskolendk.dk</Heading>
+    </div>
+
+    <div class="col-span-6">
+      <Text teksttype="p_smaller" stylingclasses="opacity-90">Adresse</Text>
+      <Heading htmlheading="span" size="h4">
+        Rosenørns Allé 31<br />1970 Frederiksberg<br />Danmark
+      </Heading>
+    </div>
+
+    <div class="col-span-6">
+      <Text teksttype="p_smaller" stylingclasses="opacity-90">Socials</Text>
+      <ul class="space-y-1">
+        <li>
+          <a
+            class="underline underline-offset-2"
+            href="https://www.instagram.com/hojskolendk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+            >Instagram ↗</a
+          >
+        </li>
+        <li>
+          <a
+            class="underline underline-offset-2"
+            href="https://www.facebook.com/hojskolendk?locale=da_DK"
+            >Facebook ↗</a
+          >
+        </li>
+        <li>
+          <a
+            class="underline underline-offset-2"
+            href="https://www.tiktok.com/@hojskolendk?is_from_webapp=1&sender_device=pc"
+            >Tiktok ↗</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
