--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -7,6 +7,7 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
 import ReviewCard from "../components/ReviewCard.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <MainLayout title="Titel">
