--- a/src/components/BlogPostCard2.astro
+++ b/src/components/BlogPostCard2.astro
@@ -1,10 +1,18 @@
 ---
-const { img, alttext, topic, date, heading, text } = Astro.props;
+const {
+  img,
+  alttext,
+  topic,
+  date,
+  heading,
+  text,
+  stylingclasses = "",
+} = Astro.props;
 import Text from "../components/Text.astro";
 import Heading from "./Heading.astro";
 ---
 
-<article class="bg-off-white mt-10 rounded-[5px]">
+<article class:list={["bg-off-white mb-10 rounded-[5px]", stylingclasses]}>
   <img src={img} alt={alttext} class="" />
   <div class="flex flex-row justify-between px-4 pt-4 pb-2">
     <Text teksttype="p_medium" stylingclasses="text-orange">
@@ -14,7 +22,7 @@ import Heading from "./Heading.astro";
       {date}
     </Text>
   </div>
-  <Heading size="h1" htmlheading="h1" stylingclasses="px-4 lg:text-[20px]">
+  <Heading size="h4" htmlheading="h4" stylingclasses="px-4 lg:text-[20px]">
     {heading}</Heading
   >
   <Text teksttype="p_smaller" stylingclasses="text-dark-grey px-4 pb-6 pt-2">
